--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "nuricar"
+    "default": "nuricar-abe68"
   },
   "hosting": {
     "public": "dist/WarningLightsApp",
