--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,5 +17,6 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NURICAR }}'
           channelId: live
           projectId: nuricar
+      - run: ng build --prod    
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
