--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '12.x'
       - name: Install dependencies
-        run:  npm ci
+        run:  npm install
       - name: Build  
         run:  npm run build --prod
       - uses: FirebaseExtended/action-hosting-deploy@v0
