--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "angular-bootstrap-md": "^11.1.0",
     "angular-responsive-carousel": "^2.0.2",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "ngx-ui-loader": "^11.0.0",
     "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
