--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ng-select/ng-select": "^7.3.0",
     "angular-bootstrap-md": "^11.1.0",
     "angular-responsive-carousel": "^2.0.2",
     "animate.css": "^3.7.2",
