--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "sonar": "./node_modules/.bin/sonar-scanner -Dsonar.projectKey=WarningLightsApp -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000/",
-    "heroku-postbuild": "ng build --prod",
-    "postinstall": "ng build --aot --prod"
+    "heroku-postbuild": "ng build --configuration production",
+    "postinstall": "ng build --aot --configuration production"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.5",
+    "@angular/animations": "~12.2.8",
     "@angular/cdk": "^10.1.3",
-    "@angular/cli": "~10.0.4",
-    "@angular/common": "~10.0.5",
-    "@angular/compiler": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.5",
-    "@angular/core": "~10.0.5",
-    "@angular/forms": "~10.0.5",
-    "@angular/localize": "~10.0.5",
+    "@angular/cli": "~12.2.8",
+    "@angular/common": "^12.2.8",
+    "@angular/compiler": "~12.2.8",
+    "@angular/compiler-cli": "~12.2.8",
+    "@angular/core": "^12.2.8",
+    "@angular/forms": "^12.2.8",
+    "@angular/localize": "^12.2.8",
     "@angular/material": "^10.1.3",
-    "@angular/platform-browser": "~10.0.5",
-    "@angular/platform-browser-dynamic": "~10.0.5",
-    "@angular/router": "~10.0.5",
+    "@angular/platform-browser": "~12.2.8",
+    "@angular/platform-browser-dynamic": "~12.2.8",
+    "@angular/router": "~12.2.8",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ng-select/ng-select": "^7.3.0",
     "angular-bootstrap-md": "^11.1.0",
@@ -38,30 +38,28 @@
     "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "typescript": "~3.9.5",
-    "zone.js": "~0.10.3"
+    "typescript": "~4.3.5",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.5",
-    "@angular/cli": "~10.0.4",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^12.2.8",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "enhanced-resolve": "^3.3.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-sonarqube-unit-reporter": "0.0.21",
     "protractor": "~7.0.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "tslint": "~6.1.0"
   },
   "engines": {
     "node": "12.16.3",
