--- a/package.json
+++ b/package.json
@@ -14,55 +14,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.8",
-    "@angular/cdk": "^10.1.3",
-    "@angular/cli": "~12.2.8",
-    "@angular/common": "^12.2.8",
-    "@angular/compiler": "~12.2.8",
-    "@angular/compiler-cli": "~12.2.8",
-    "@angular/core": "^12.2.8",
-    "@angular/forms": "^12.2.8",
-    "@angular/localize": "^12.2.8",
-    "@angular/material": "^10.1.3",
-    "@angular/platform-browser": "~12.2.8",
-    "@angular/platform-browser-dynamic": "~12.2.8",
-    "@angular/router": "~12.2.8",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "@ng-select/ng-select": "^7.3.0",
-    "angular-bootstrap-md": "^11.1.0",
-    "angular-responsive-carousel": "^2.0.2",
+    "@angular/animations": "14.2.7",
+    "@angular/cdk": "14.2.7",
+    "@angular/cli": "14.2.7",
+    "@angular/common": "14.2.7",
+    "@angular/compiler": "14.2.7",
+    "@angular/compiler-cli": "14.2.7",
+    "@angular/core": "14.2.7",
+    "@angular/forms": "14.2.7",
+    "@angular/localize": "14.2.7",
+    "@angular/material": "14.2.7",
+    "@angular/platform-browser": "14.2.7",
+    "@angular/platform-browser-dynamic": "14.2.7",
+    "@angular/router": "14.2.7",
+    "@ng-bootstrap/ng-bootstrap": "13.1.1",
+    "@ng-select/ng-select": "9.1.0",
+    "angular-bootstrap-md": "14.0.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
-    "ngx-ui-loader": "^11.0.0",
+    "ngx-ui-loader": "13.0.0",
     "path": "^0.12.7",
-    "rxjs": "~6.5.5",
+    "rxjs": "7.8.0",
     "tslib": "^2.0.0",
-    "typescript": "~4.3.5",
+    "typescript": "~4.6.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.8",
+    "@angular-devkit/build-angular": "^14.2.7",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "enhanced-resolve": "^3.3.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "4.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
+    "karma": "6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.0.0",
     "karma-sonarqube-unit-reporter": "0.0.21",
     "protractor": "~7.0.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0"
-  },
-  "engines": {
-    "node": "12.16.3",
-    "npm": "6.14.4"
   }
 }
