--- a/package.json
+++ b/package.json
@@ -59,5 +59,9 @@
     "sonar-scanner": "^3.1.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0"
+  },
+  "engines": {
+    "node": "16.10.0",
+    "npm": "7.24.0"
   }
 }
