--- a/package.json
+++ b/package.json
@@ -14,34 +14,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.2.7",
-    "@angular/cdk": "14.2.7",
-    "@angular/cli": "14.2.7",
-    "@angular/common": "14.2.7",
-    "@angular/compiler": "14.2.7",
-    "@angular/compiler-cli": "14.2.7",
-    "@angular/core": "14.2.7",
-    "@angular/forms": "14.2.7",
-    "@angular/localize": "14.2.7",
-    "@angular/material": "14.2.7",
-    "@angular/platform-browser": "14.2.7",
-    "@angular/platform-browser-dynamic": "14.2.7",
-    "@angular/router": "14.2.7",
-    "@ng-bootstrap/ng-bootstrap": "13.1.1",
-    "@ng-select/ng-select": "9.1.0",
-    "angular-bootstrap-md": "14.0.0",
+    "@angular/animations": "17.3.9",
+    "@angular/cdk": "17.3.9",
+    "@angular/cli": "17.3.7",
+    "@angular/common": "17.3.9",
+    "@angular/compiler": "17.3.9",
+    "@angular/compiler-cli": "17.3.9",
+    "@angular/core": "17.3.9",
+    "@angular/forms": "17.3.9",
+    "@angular/localize": "17.3.9",
+    "@angular/material": "17.3.9",
+    "@angular/platform-browser": "17.3.9",
+    "@angular/platform-browser-dynamic": "17.3.9",
+    "@angular/router": "17.3.9",
+    "@ng-bootstrap/ng-bootstrap": "16.0.0",
+    "@ng-select/ng-select": "12.0.7",
     "animate.css": "^3.7.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "5.3.3",
     "express": "^4.17.1",
     "ngx-ui-loader": "13.0.0",
     "path": "^0.12.7",
     "rxjs": "7.8.0",
     "tslib": "^2.0.0",
-    "typescript": "~4.6.4",
-    "zone.js": "~0.11.4"
+    "typescript": "5.4.5",
+    "zone.js": "~0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.7",
+    "@angular-devkit/build-angular": "^17.3.7",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
