--- a/package.json
+++ b/package.json
@@ -14,38 +14,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.3.9",
-    "@angular/cdk": "17.3.9",
-    "@angular/cli": "17.3.7",
-    "@angular/common": "17.3.9",
-    "@angular/compiler": "17.3.9",
-    "@angular/compiler-cli": "17.3.9",
-    "@angular/core": "17.3.9",
-    "@angular/forms": "17.3.9",
-    "@angular/localize": "17.3.9",
-    "@angular/material": "17.3.9",
-    "@angular/platform-browser": "17.3.9",
-    "@angular/platform-browser-dynamic": "17.3.9",
-    "@angular/router": "17.3.9",
-    "@ng-bootstrap/ng-bootstrap": "16.0.0",
-    "@ng-select/ng-select": "12.0.7",
-    "animate.css": "^3.7.2",
+    "@angular/animations": "^20.3.2",
+    "@angular/cdk": "^20.2.5",
+    "@angular/cli": "20.3.3",
+    "@angular/common": "20.3.2",
+    "@angular/compiler": "20.3.2",
+    "@angular/compiler-cli": "20.3.2",
+    "@angular/core": "20.3.2",
+    "@angular/forms": "20.3.2",
+    "@angular/localize": "20.3.2",
+    "@angular/material": "20.2.5",
+    "@angular/platform-browser": "20.3.2",
+    "@angular/platform-browser-dynamic": "20.3.2",
+    "@angular/router": "20.3.2",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.0",
+    "@ng-select/ng-select": "^20.2.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "5.3.3",
-    "express": "^4.17.1",
-    "ngx-ui-loader": "13.0.0",
+    "express": "^5.1.0",
+    "ngx-ui-loader": "16.0.1",
     "path": "^0.12.7",
     "rxjs": "7.8.0",
-    "tslib": "^2.0.0",
-    "typescript": "5.4.5",
-    "zone.js": "~0.14.6"
+    "tslib": "^2.8.1",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.7",
+    "@angular-devkit/build-angular": "20.3.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "angular-eslint": "20.3.0",
     "enhanced-resolve": "^3.3.0",
+    "eslint": "^9.35.0",
     "jasmine-core": "4.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "6.4.1",
@@ -57,10 +57,11 @@
     "protractor": "~7.0.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "8.40.0"
   },
   "engines": {
-    "node": "20.13.1",
-    "npm": "10.5.2"
+    "node": "22.14.0",
+    "npm": "10.9.0"
   }
 }
