--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+    "dev": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "test": "ng test",
+    "test:headless": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
+    "lint:fix": "ng lint --fix",
     "e2e": "ng e2e",
     "sonar": "./node_modules/.bin/sonar-scanner -Dsonar.projectKey=WarningLightsApp -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000/",
     "heroku-postbuild": "ng build --configuration production",
-    "postinstall": "ng build --aot --configuration production"
+    "postinstall": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
@@ -28,7 +32,7 @@
     "@angular/platform-browser-dynamic": "20.3.2",
     "@angular/router": "20.3.2",
     "@ng-bootstrap/ng-bootstrap": "^19.0.0",
-    "@ng-select/ng-select": "^20.2.0",
+    "@ng-select/ng-select": "^20.3.5",
     "animate.css": "^4.1.1",
     "bootstrap": "5.3.3",
     "express": "^5.1.0",
@@ -39,7 +43,7 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.3.3",
+    "@angular-devkit/build-angular": "^20.3.6",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -54,7 +58,7 @@
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.0.0",
     "karma-sonarqube-unit-reporter": "0.0.21",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~8.3.0",
     "typescript": "^5.9.2",
