--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@angular/platform-browser": "20.3.2",
     "@angular/platform-browser-dynamic": "20.3.2",
     "@angular/router": "20.3.2",
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/ios": "^7.4.4",
     "@ng-bootstrap/ng-bootstrap": "^19.0.0",
     "@ng-select/ng-select": "^20.3.5",
     "animate.css": "^4.1.1",
