--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@angular/platform-browser-dynamic": "20.3.2",
     "@angular/router": "20.3.2",
     "@capacitor/android": "^7.4.4",
+    "@capacitor/camera": "^7.0.2",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
+    "@capacitor/device": "^7.0.2",
     "@capacitor/ios": "^7.4.4",
     "@ng-bootstrap/ng-bootstrap": "^19.0.0",
     "@ng-select/ng-select": "^20.3.5",
