--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
-  - type: static
+  - type: web
     name: nuricar
+    env: static
     buildCommand: npm install && npm run build
     staticPublishPath: dist/WarningLightsApp
     routes:
