--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,12 @@ services:
     name: nuricar
     env: static
     buildCommand: npm install && npm run build
-    staticPublishPath: dist/WarningLightsApp
+    staticPublishPath: ./dist/WarningLightsApp
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: public, max-age=0, must-revalidate
     routes:
       - type: rewrite
-        source: /*
+        source: /(.*)
         destination: /index.html
